# calculator_Arturas_Kairaitis

./: Calculator.ipynb  README.md
Calculator/: README.md  pyproject.toml
Calculator/src/calculator_Arturas_Kairaitis/: calculator.py
Calculator/test/: test.py
