[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_Arturas_Kairaitis"
version = "0.0.2"
authors = [
  { name="Arturas Kairaitis", email="kairaitisa@gmail.com" },
]
description = "Simple calculator with basic functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.url]
"Homepage" = "https://github.com/Akai-stack/calculator_Arturas_Kairaitis.git"